# bevy_sliding_door

./: Cargo.toml  LICENSE-APACHE2.md  README.md  TODO.md  clippy.toml  rustfmt.toml
examples/character/: character.rs  main.rs  menu.rs
src/: lib.rs  plugin.rs  state_machine.rs  utils.rs
