[package]
name = "bevy_sliding_door"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ivan Ribeiro ivan.ribeiro09s@gmail.com"]
repository = "https://github.com/ivsop/bevy_shatter"
homepage = "https://github.com/ivsop/bevy_shatter"
documentation = "https://docs.rs/bevy_shatter"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "sliding", "door"]
description = "A bevy plugin for sliding door"
readme = "README.md"
exclude = [
  "examples/",
  ".github",
  "rustfmt.toml",
  "clippy.toml",
  "README.md",
  "clippy.toml",
  "rustfmt.toml",
  "Cargo.lock"
]

[dependencies]
avian3d = "0.3.1"
bevy = { version = "^0.16", default-features = false, features = [
    "bevy_log",
    "bevy_pbr", # ?????????????
]}
interpolation = "0.3.0"
bevy_gearbox = { git = "https://github.com/DEMIURGE-studio/bevy_gearbox.git", rev = "04b97d37c0b0d224e21805fec51a1fdd38eb941d" }

[dev-dependencies]
bevy-tnua-avian3d = "0.5.0"
bevy-tnua = "0.24.0"
bevy = { version = "0.16.1", default-features = false, features = [
    "android-game-activity",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",

    "std",
    "async_executor",

    # optional bevy features
    "serialize",
    "wayland",
    "dynamic_linking"
]}
bevy_egui = "0.35.1"
bevy_atmosphere = "0.13.0"
bevy_spectator = "0.8.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
